syntax = "proto3";

option csharp_namespace = "OrderService";
option go_package = "order";

package orderservice;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  double total_amount = 3;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderResponse {
  bool success = 1;
  string order_id = 2;
  string message = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  bool success = 1;
  Order order = 2;
  string message = 3;
}

message Order {
  string order_id = 1;
  string customer_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  string created_at = 6;
  string cancelled_at = 7;
  string cancellation_reason = 8;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

enum OrderStatus {
  CREATED = 0;
  PROCESSING = 1;
  COMPLETED = 2;
  CANCELLED = 3;
  FAILED = 4;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  string message = 2;
}

message CancelOrderRequest {
  string order_id = 1;
  string reason = 2;
}

message CancelOrderResponse {
  bool success = 1;
  string message = 2;
} 